Chapter 5 split into part 1 and part 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "random": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "fstream": "cpp"
     }
 }
