Play Puck challenge

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
         "xutility": "cpp",
         "random": "cpp",
         "vector": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "xtree": "cpp",
+        "set": "cpp",
+        "unordered_map": "cpp"
     }
 }
